--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -394,12 +394,6 @@
 
     <header>
         <h1>My Website</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
-        </nav>
     </header>
     <div class="main-content">
         <h1>Welcome,{{ session['username'] }}</h1>
@@ -444,6 +438,7 @@
                                     <th>Order ID</th>
                                     <th>Product</th>
                                     <th>Status</th>
+                                    <th>Quantity</th>
                                     <th>Total</th>
                                     <th>Image</th>
                                     <th>Action</th>
@@ -455,7 +450,9 @@
                                     <td>{{ order['order_id'] }}</td>
                                     <td>{{ order['product_name'] }}</td>
                                     <td>{{ order['status'] }}</td>
-                                    <td>${{ order['product_price'] }}</td>
+                                    <td>{{ order['quantity'] }}</td>
+                                    
+                                    <td>${{ order['quantity'] * order['product_price'] }}</td>
                                     <td><img src="{{ url_for('static', filename=order['image_path'])}}" alt="Image"
                                             width="100"></td>
                                     <td>
@@ -489,10 +486,14 @@
                         </div>
                         <p>{{ product['description'] }}</p>
                         <p><strong>${{ product['price'] }}</strong></p>
+
                         <form action="/order" method="POST">
-                            <input type="hidden" name="product_id" value="{{ product['id']}}">
+                            <input type="hidden" name="product_id" value="{{ product['id'] }}">
+                            <label for="quantity">Quantity:</label>
+                            <input type="number" id="quantity" name="quantity" value="1" min="1" required>
                             <button type="submit">Order Now</button>
                         </form>
+                        
                     </div>
                     {% endfor %}
                 </div>
