--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -15,6 +15,16 @@
 
         
         <input type="file" name="image_path" value="{{ product[4] }}" required>
+        <div>
+            <label for="category_id">Category</label>
+            <select name="category_id" id="category_id">
+                {% for category in categories %}
+                    <option value="{{ category.id }}" {% if category.id == product.category_id %}selected{% endif %}>
+                        {{ category.name }}
+                    </option>
+                {% endfor %}
+            </select>
+        </div>
 
 
         <button type="submit">Save Changes</button>
